--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/ejercicio1.js\"",
+    "start": "tsc-watch --onSuccess \"node dist/menu.js\"",
     "doc": "typedoc",
     "test": "mocha"
   },
