--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
         "declaration": true,
         "noImplicitAny":true,
         "strictNullChecks": true,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
       }
-   }
+}
